# graphed-preserve-mvp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
.graphed/: state.json
.graphed/M25/: attempts.md
.graphed/M26/: attempts.md
.graphed/M27/: attempts.md
.graphed/M30/: attempts.md
.graphed/M36/: attempts.md
.graphed/M9/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
docs/_templates/autosummary/: module.rst
scripts/: advance.py  make_triton_model_repo.py
src/graphed_preserve/: __init__.py  bundle.py  errors.py  externals.py  interpreter.py  manifest.py
tests/frozen/m25/: test_histogram_preservation.py
tests/frozen/m26/: conftest.py  fake_triton.py  test_ml_bundle_roundtrips.py  test_ml_plugin_frameworks.py  test_ml_plugin_registry.py
tests/frozen/m27/: conftest.py  fake_triton_multi.py  test_variadic_call_templates.py  test_variadic_frameworks.py
tests/frozen/m30/: test_producer_cross_seam.py
tests/frozen/m36/: test_content_hash_memo.py
tests/frozen/m9/: README.md  agc.py  conftest.py  test_build_errors.py  test_fingerprint.py  test_inspect.py  test_missing_payload.py  test_ml_plugins.py  test_no_originals.py  test_plugins.py  test_reproduce.py  test_triton_server.py
tests/samples/triton_models/scorer/: config.pbtxt
tests/samples/triton_models/scorer/1/: model.py
